# Skippy_V2

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  VOICE_CONTINUATION_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
custom_components/skippy_v2/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
db/: init.sql  pgadmin-pgpass  pgadmin-servers.json
db/migrations/: 002_people_identity_system.sql  003_ha_areas_devices.sql  004_task_management_system.sql  005_add_person_memory_relationship.sql  006_update_default_importance_score.sql  007_remove_ha_device_management.sql  008_add_notification_queue.sql  009_scheduled_task_ran_at.sql  010_reminder_follow_up_tracking.sql
docs/: CODE_FIXES_IMPLEMENTED.md  CODE_REVIEW_FINDINGS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  ERROR_LOG_AND_CORRECTIONS.md  QUICK_COMPLETION_GUIDE.md  SKIPPY_UI_REFACTOR_FOR_HOME_PY.md  UI_REDESIGN_IMPLEMENTATION_GUIDE.md  UI_REDESIGN_STATUS.md
scripts/: google_oauth.py
src/skippy/: config.py  db_init.py  db_utils.py  main.py  telegram.py
tests/: conftest.py  test_agent.py  test_config.py  test_database.py  test_memory.py  test_prompts.py  test_tools_contact_sync.py  test_tools_gmail.py  test_tools_google_calendar.py  test_tools_google_contacts.py  test_tools_home_assistant.py  test_tools_ics_calendar.py  test_tools_init.py  test_tools_people.py  test_tools_scheduler.py  test_tools_tavily.py  test_tools_telegram.py
whatsapp_adapter/: .gitignore  Dockerfile  package-lock.json  package.json
(+45 files in other folders)
